<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile Scratch</string>
    <string name="action_settings">Settings</string>

    <!-- Main Activity -->
    <string name="main_new_project_string">Create new project</string>
    <string name="main_open_project_string">Open existing project</string>
    <string name="main_no_existing_projects_string">There are no existing projects available</string>

    <!-- New Project Activity -->
    <string name="title_activity_new_project">Create new project</string>
    <string name="new_project_name_string">Input project name:</string>
    <string name="new_project_create_string">Create project</string>
    <string name="new_project_dialog_title_string">Attention</string>
    <string name="new_project_dialog_message_string">The name of the project has to be set</string>
    <string name="new_project_project_exists">A project with the inserted name already exists</string>

    <!-- Open Project Activity -->
    <string name="title_activity_open_project">Open project</string>
    <string name="open_project_open_string">Open project</string>

    <!-- Animation Activity -->
    <string name="title_activity_animation">Animation</string>
    <string name="animation_stop_execution">Stop animation</string>

    <!-- Editor Activity -->
    <string name="title_activity_editor">Editor</string>
    <string name="editor_store_string">Store</string>
    <string name="editor_animation_string">Start Animation</string>
    <string name="editor_image_string">Chosse image</string>
    <string name="editor_sound_string">Chosse sound</string>
    <string name="editor_context_menu_title">Options</string>
    <string name="editor_context_menu_show_picture">Show picture</string>
    <string name="editor_context_menu_add_sprite">Add new sprite</string>
    <string name="editor_context_menu_select_picture">Select picture</string>
    <string name="editor_context_menu_delete">Delete</string>
    <string name="editor_animation_empty">The project is empty</string>
    <string name="editor_context_menu_choose_coordinates">Choose coordinates</string>
    <string name="editor_html_message_language">en</string>
    <string name="editor_error_empty_project">The project is empty</string>
    <string name="editor_error_missing_images">Images are missing in some scenes and sprites</string>

    <!-- Sound Activity -->
    <string name="title_activity_sound">Sounds</string>

    <!-- Project Editor Activity -->
    <string name="title_activity_project_editor">Project Editor</string>
    <string name="project_editor_editor_tab_title">Editor</string>
    <string name="project_editor_sound_tab_title">Sound</string>

    <!-- Dialog Create Sprite -->
    <string name="dialog_sprite_label_title">Choose coordinates</string>
    <string name="dialog_sprite_label_x">X</string>
    <string name="dialog_sprite_label_y">Y</string>
    <string name="dialog_sprite_label_create">OK</string>
    <string name="dialog_error_x_y">The inserted coordinates are incorrect</string>

    <!-- Animation Activity -->
    <string name="animation_error_sprite_index">The selected Sprite is not valid</string>
    
    <!-- Settings Activity -->
    <string name="title_activity_settings">Settings</string>
    <string name="settings_html_source_local">Local</string>
    <string name="settings_html_source_remote">Remote</string>
    <string name="settings_html_source_remote_address_label">Address:</string>

</resources>
